tried to compress some of the related element stylings into class stylings instead

--- a/aboutme.html
+++ b/aboutme.html
@@ -9,8 +9,8 @@
       <p class="masthead-intro">Hi! I am</p>
       <h1 class="masthead-heading">A student</h1></header>
     <section>
-      <h1 id="intro">Intro</h1>
-      <p id="intro"> I'm a student of many things and a working professional in a couple of fields, looking to expand into at least one more.</p>
+      <h1 class="intro">Intro</h1>
+      <p class="intro"> I'm a student of many things and a working professional in a couple of fields, looking to expand into at least one more.</p>
     </section>
     <section>
       <h1 id="whereiamfrom">Where I'm From</h1>
