initial rough of the html elements for the header/nav bar and the non-slider banner section. Added image file for background

--- a/landingpage.html
+++ b/landingpage.html
@@ -3,7 +3,30 @@
 <header>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="css/style.css">
+	<div id="icon">
+	  <img src = "img/logo.png" alt = "Not actually Karma">
+	</div>
+	
+	<nav><ul>
+	    <li id="meetkarma">Meet Karma<a href="#"></a></li>
+	    <li><a href="#">How it Works</a></li>
+	    <li><a href="#">Store</a></li>
+	    <li><a href="#">Blog</a></li>
+	    <li><a href="#">Help</a></li>
+	    <li><a href="#">Login</a></li>
+	  </ul>
+	</nav>
 </header>
 <body>
+  <div id="notslider">
+    <div id="notslidertext">
+      <h1>Introducing not-Karma</h1>
+      <h2>Bring mock sites with you, everywhere you go.</h2>
+      <div id="notsliderbutton">
+	<p>Learn More</p>
+      </div>
+    </div>
+  </div>
+  
 </body>
 </html>
