--- a/landingpage.html
+++ b/landingpage.html
@@ -8,7 +8,7 @@
 	</div>
 	
 	<nav><ul>
-	    <li id="meetkarma">Meet Karma<a href="#"></a></li>
+	    <li id="meetkarma"><a href="#">Meet Karma</a></li>
 	    <li><a href="#">How it Works</a></li>
 	    <li><a href="#">Store</a></li>
 	    <li><a href="#">Blog</a></li>
