materials for Lesson 5.4

--- a/landingpage.html
+++ b/landingpage.html
@@ -3,10 +3,7 @@
 <header>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="css/style.css">
-	<div id="icon">
-	  <img src = "img/logo.png" alt = "Not actually Karma">
-	</div>
-	
+<!--	
 	<nav><ul>
 	    <li id="meetkarma"><a href="#">Meet Karma</a></li>
 	    <li><a href="#">How it Works</a></li>
@@ -16,9 +13,25 @@
 	    <li><a href="#">Login</a></li>
 	  </ul>
 	</nav>
+-->
 </header>
 <body>
-  <div id="notslider">
+    <nav class="top-navigation">
+        <div class="content">
+	  <ul class="links">
+	    <li class="active"><a href="">Meet Karma</a></li>
+	    <li><a href="">How It works</a></li>
+	    <li><a href="">Store</a></li>
+	    <li><a href="">Blog</a></li>
+	    <li><a href="">Help</a></li>
+	    <li><a href="">Log in</a></li>
+	  </ul>
+ 	  <img class="logo" src="img/karma-logo.svg" alt="Not actually Karma" width="26px">
+	</div>
+    </nav>
+
+<!--
+<div id="notslider">
     <div id="notslidertext">
       <h1>Introducing not-Karma</h1>
       <h2>Bring mock sites with you, everywhere you go.</h2>
@@ -28,5 +41,7 @@
     </div>
   </div>
   
+-->
 </body>
 </html>
+
