--- a/landingpage.html
+++ b/landingpage.html
@@ -30,18 +30,20 @@
 	</div>
     </nav>
 
-<!--
-<div id="notslider">
-    <div id="notslidertext">
-      <h1>Introducing not-Karma</h1>
-      <h2>Bring mock sites with you, everywhere you go.</h2>
-      <div id="notsliderbutton">
-	<p>Learn More</p>
+    <div id="notslider">
+      <div id="notslidertext">
+	<h1>Introducing not-Karma</h1>
+	<h2>Bring mock sites with you, everywhere you go.</h2>
+	<div id="notsliderbutton">
+	  <p>Learn More</p>
+	</div>
       </div>
     </div>
-  </div>
+      
+    <div class="content">
+</div>
   
--->
+
 </body>
 </html>
 
