--- a/hello_world/index.html
+++ b/hello_world/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link href="css/style.css" rel="stylesheet">
-    <script src="//code.jquery.com/jquery-latest.min.js"></script>
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="js/script.js"></script>
   </head>
   <body>
