managed to get teh box stretching/alignment right in the test case. Now to move that back into the rest of the containers

--- a/unit3/main.html
+++ b/unit3/main.html
@@ -13,25 +13,24 @@
       <p>Just ToDo it!</p>
       <div class="todoentry">Type here to add a todo item</div>
       <div class="todos">
-	<ol>
-	  <li><div class="todoitem">
- 	        <div class="todotext">My first todo</div>
-	        <div class="todosquare"></div>
-              </div>
-          </il>
-	  <li><div class="todoitem">
- 	        <div class="todotext">A great todo</div>
-	        <div class="todosquare"></div>
-              </div>
-          </il>
-	  <li><div class="todoitem">
- 	        <div class="todotext">about nothing</div>
-	        <div class="todosquare"></div>
-              </div>
-          </il>
-         </ol>
+	<div class="item">
+ 	  <p>My first todo</p>
+	  <img src="img/check.png" alt="checkmark">
+        </div>
       </div>
 </div>
-<div class="todosquare"></div>
+	<div class="itembox">
+ 	  <div class="itemleft">A great todo</div>
+	  <div class="itemright"></div>
+        </div>
+	<div class="itembox">
+ 	  <div class="itemleft">Another great todo</div>
+	  <div class="itemright"></div>
+        </div>
+	<div class="itembox">
+ 	  <div class="itemleft">A final great todo</div>
+	  <div class="itemright"></div>
+        </div>
+
   </body>
 </html>
