replaced the todoentry class plain text area with an input field and an element ID

--- a/unit3/main.html
+++ b/unit3/main.html
@@ -11,7 +11,7 @@
     </div>
     <div class="container">
       <p>Just ToDo it!</p>
-      <div class="todoentry">Type here to add a todo item</div>
+	<input type="text" id="newTodo"></input>
       <div class="todos">
 	<div class="itembox">
  	  <div class="itemleft">A great todo</div>
