--- a/unit3/main.html
+++ b/unit3/main.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf8">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <script src="http://code.jquery.com/jquery.min.js"></script>
     <script src="js/main.js"></script>
   </head>
   <body>
