removed placeholder todo items

--- a/unit3/main.html
+++ b/unit3/main.html
@@ -12,20 +12,8 @@
     </div>
     <div class="container">
       <p>Just ToDo it!</p>
-	<input type="text" id="newTodo"></input>
+	<input type="text" id="newTodo" placeholder="Enter then ENTER."></input>
       <div class="todos">
-	<div class="itembox">
- 	  <div class="itemleft">A great todo</div>
-	  <div class="itemright"></div>
-        </div>
-	<div class="itembox">
- 	  <div class="itemleft">Another great todo</div>
-	  <div class="itemright"></div>
-        </div>
-	<div class="itembox">
- 	  <div class="itemleft">A final great todo</div>
-	  <div class="itemright"></div>
-        </div>
       </div>
     </div>
   </body>
