--- a/unit4/main.html
+++ b/unit4/main.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <link type="text/css" rel="stylesheet" href="css/main.css">
-    <script type="text/js" src="js/main.js"></script>
     <script src="http://code.jquery.com/jquery.min.js"></script>
+    <script src="js/main.js"></script>
   </head>
   <body>
     <div class="main">
