--- a/unit3.3/quizshow.html
+++ b/unit3.3/quizshow.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf8">
+    <script src="http://code.jquery.com/jquery.min.js"></script>
     <script src="app.js"></script>
     <link type="text/css" rel="stylesheet" href="style.css">
   </head>
