basic list and object manipulation work is done; text is attached to the html at appropriate places; newGame works on page load and on button press

--- a/unit3.3/quizshow.html
+++ b/unit3.3/quizshow.html
@@ -13,11 +13,12 @@
     </div>
     <div class="fullwidth middle">
       <div class="curE">
-	<p>current element</p>
+	<h3>Current Element</h3>
+	<p></p>
       </div>
       <div class="form">
 	<form>
-	  What is the full chemical name?<br>
+	  <h3>What is the full chemical name?</h3>
 	  <input type="text" name="guess">
 	</form>
       </div>
@@ -25,10 +26,12 @@
     </div>
     <div class="fullwidth bottom">
       <div class="elements">
-	<p>Unknown Elements</p>
+	<h3>Unknown Elements</h3>
+	<p></p>
       </div>
       <div class="oldE">
-	<p>Mastered Elements</p>
+	<h3>Mastered Elements</h3>
+	<p></p>
       </div>
     </div>
     
