preserve changes to quizshow through app reset

--- a/unit3.3/quizshow.html
+++ b/unit3.3/quizshow.html
@@ -17,9 +17,9 @@
 	<p></p>
       </div>
       <div class="form">
-	<form>
+	<form id="guessForm">
 	  <h3>What is the full chemical name?</h3>
-	  <input type="text" name="guess">
+	  <input type="text" name="guessName" id="guessName">
 	</form>
       </div>
       <div class="feedback"><p>feedback goes here</p></div>
