added a submit button and slightly changed changes

--- a/unit3.3/quizshow.html
+++ b/unit3.3/quizshow.html
@@ -20,6 +20,7 @@
 	<form id="guessForm">
 	  <h3>What is the full chemical name?</h3>
 	  <input type="text" autocomplete="off" name="guessName" id="guessName">
+	  <input type="submit" value="Submit">
 	</form>
       </div>
       <div class="feedback"><p>feedback goes here</p></div>
