cleaned up the wikiclean.js file to remove broken functions; tried to add an optional paramater to the objectIfy function that will let me pull out only a single card's information but can't get it to work yet

--- a/unit4.1/wikiajax.html
+++ b/unit4.1/wikiajax.html
@@ -4,10 +4,19 @@
     <meta charset="utf8">
     <link type="text/css" rel="stylesheet" href="style.css">
   </head>
-  <script src="http://code.jquery.com/jquery.min.js"></script>
+  <script src="/usr/share/javascript/jquery/jquery.js"></script>
   <script src="wikiclean.js"></script>
+  <script src="app.js"></script>
 
   <body>
+    <div class="lessonInfo"></div>
+    <div class="promptColumn"></div>
+    <div class="answerColumn"></div>
+    <div class="groupDividers"></div>
+    <div class="cardGroup">
+      <div class="card">
+      </div>
+    </div>
   </body>
 </html>
 
